--- a/index.html
+++ b/index.html
@@ -1,63 +1,99 @@
 <!DOCTYPE html>
-
 <html lang="ru">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
-<title>Shark Tapper</title>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
-<style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+  <meta http-equiv="Pragma" content="no-cache"/>
+  <meta http-equiv="Expires" content="0"/>
+  <title>Shark Tapper</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet"/>
+  <style>
     html, body {
-      width: 100%; height: 100%;
+      margin: 0;
+      padding: 0;
       font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
       background: #f2f2f7;
       color: #1c1c1e;
-      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      overflow-x: hidden;
       touch-action: manipulation;
     }
-    .loading-screen {
-      position: fixed; width: 100%; height: 100%;
-      background: #ffffff; z-index: 9999;
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-    }
-    .loading-screen img { max-width: 70%; }
-    .loading-screen span {
-      font-size: 22px; margin-top: 16px; color: #333;
-    }
     .game-container {
-      position: absolute; left: 50%; top: 50%;
-      transform: translate(-50%, -50%);
-      width: 100vw; max-width: 420px; height: 100vh;
-      background: #ffffff;
-      display: flex; flex-direction: column;
-      align-items: center; justify-content: space-between;
-      padding: 24px 16px;
+      max-width: 420px;
+      margin: 0 auto;
+      padding: 100px 20px 60px;
+      background: white;
+      border-radius: 28px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+      position: relative;
+      box-sizing: border-box;
+      display: none;
     }
     .balance {
-      font-size: 28px; font-weight: 600; margin-bottom: 16px;
+      font-size: 24px;
+      font-weight: 600;
+      text-align: center;
+      margin-bottom: 20px;
     }
     .tap-image {
-      max-width: 100%;
-      border-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      display: block;
+      margin: 0 auto;
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      border: 6px solid white;
+      object-fit: cover;
+    }
+    .menu-buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 12px;
+      margin-top: 24px;
+    }
+    .shop-button {
+      background: white;
+      border: none;
+      padding: 12px 18px;
+      font-size: 15px;
+      font-weight: 600;
+      border-radius: 16px;
+      color: #007aff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
       cursor: pointer;
-      transition: transform 0.1s;
+      transition: background 0.2s ease;
+      min-width: 100px;
     }
-    .tap-animation {
-      animation: tapPulse 0.2s ease;
+    .shop-button:active {
+      background: #e5e5ea;
     }
-    @keyframes tapPulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(0.92); }
-      100% { transform: scale(1); }
+    .loading-screen {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      z-index: 9999;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .loading-screen img {
+      position:absolute;
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      z-index:-1;
     }
     .floating-text {
       position: absolute;
       font-size: 18px;
-      font-weight: 600;
       color: #34c759;
+      font-weight: 600;
       animation: floatUp 1s ease-out forwards;
       pointer-events: none;
     }
@@ -65,135 +101,149 @@
       0% { opacity: 1; transform: translateY(0); }
       100% { opacity: 0; transform: translateY(-40px); }
     }
-    .menu-buttons {
-      display: flex;
-      gap: 10px;
-      margin: 16px 0;
-    }
-    .shop-button {
-      background: #007aff;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 14px;
-      font-size: 17px;
-      font-weight: 500;
-      box-shadow: 0 2px 6px rgba(0, 122, 255, 0.3);
-      transition: background 0.3s;
-    }
-    .shop-button:active {
-      background: #0051a8;
-    }
-    .modal {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background: rgba(242, 242, 247, 0.96);
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      z-index: 10;
-    }
-    .shop-item, .booster-item {
-      background: #fff;
-      padding: 16px;
-      margin: 12px;
-      border-radius: 16px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-      text-align: center;
-      width: 90%;
-      max-width: 300px;
-    }
-    .shop-item img {
-      width: 100px;
-      border-radius: 16px;
-      margin-bottom: 10px;
-    }
-    .shop-item button, .booster-item button {
-      background: #007aff;
-      color: #fff;
-      border: none;
-      padding: 10px 18px;
-      border-radius: 12px;
-      font-size: 16px;
-      margin-top: 10px;
-    }
-    .booster-info {
-      margin-bottom: 10px;
-      font-size: 16px;
-      font-weight: 500;
+    @keyframes loadProgress {
+      0% { width: 0%; }
+      100% { width: 100%; }
     }
   </style>
 </head>
 <body>
-<div class="loading-screen" id="loadingScreen">
-<img alt="Shark loading" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Emoji_u1f988.svg/2048px-Emoji_u1f988.svg.png"/>
-<span>Загрузка...</span>
-</div>
-<div class="game-container" style="display:none;">
-<div class="balance"><span id="tokenCount">0</span> токенов</div>
-<img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Emoji_u1f988.svg/2048px-Emoji_u1f988.svg.png"/>
-<div class="menu-buttons">
-<button class="shop-button" onclick="openShop()">🛒 Магазин</button>
-<button class="shop-button" onclick="openBoosters()">⚡ Бустеры</button>
-<button class="shop-button" onclick="openLeaderboard()">🏆 Лидерборд</button>
-<button class="shop-button" onclick="Telegram.WebApp.close()">🚪 Выйти</button>
-</div>
+
+<div class="loading-screen" id="loading">
+  <img alt="Loading..." src="w1.png"/>
+  <div style="position:absolute; bottom:80px; width:100%; text-align:center;">
+    <div style="font-family: 'Orbitron', sans-serif; font-size: 28px; color: #fff; text-shadow: 2px 2px 8px rgba(0,0,0,0.8); margin-bottom: 16px;">
+      Приключение года 2025
+    </div>
+    <div style="width: 80%; height: 14px; background: #1a1a1a; border-radius: 8px; overflow: hidden; margin: 0 auto;">
+      <div id="progress-bar" style="
+        width: 0%;
+        height: 100%;
+        background: linear-gradient(90deg, #00ffcc, #0072ff);
+        animation: loadProgress 5s linear forwards;
+        box-shadow: 0 0 12px #00f5ff;">
+      </div>
+    </div>
+  </div>
 </div>
 
+<div class="game-container" id="gameContainer">
+  <div class="balance" id="tokenCount">0 токенов</div>
+  <img alt="Shark" class="tap-image" id="tapImage" onclick="handleTap()" src="shark.png?v=1"/>
+  <div class="menu-buttons">
+    <button class="shop-button" onclick="openShop()">🛒 Магазин</button>
+    <button class="shop-button" onclick="openBoosters()">🚀 Бустеры</button>
+    <button class="shop-button" onclick="openLeaderboard()">🏆 Лидерборд</button>
+    <button class="shop-button" onclick="Telegram.WebApp.close()">❌ Выйти</button>
+  </div>
+</div>
+
+<!-- Вставим модальные окна магазина и бустеров + лидерборд позже -->
+<!-- Скрипты будут также добавлены на следующем шаге -->
 
 
+<div class="shop-modal" id="shop-modal" style="display:none;">
+  <div class="shop-item">
+    <img src="shark.png?v=1"/>
+    <button onclick="buySkin('default', 0)">Выбрать</button>
+  </div>
+  <div class="shop-item">
+    <img src="shark_skin2.png?v=1"/>
+    <button onclick="buySkin('skin2', 1000)">Купить / Выбрать</button>
+  </div>
+  <div class="shop-item">
+    <img src="shark_skin1.png?v=1"/>
+    <button onclick="buySkin('skin3', 500)">Купить / Выбрать</button>
+  </div>
+  <button onclick="closeShop()">Закрыть</button>
+</div>
 
+<div class="booster-modal" id="booster-modal" style="display:none;">
+  <div class="booster-item">
+    <div class="booster-info">Авто-Тап +1 (50 токенов)</div>
+    <button onclick="buyBooster(50, 1)">Купить</button>
+  </div>
+  <div class="booster-item">
+    <div class="booster-info">Авто-Тап +2 (100 токенов)</div>
+    <button onclick="buyBooster(100, 2)">Купить</button>
+  </div>
+  <div class="booster-item">
+    <div class="booster-info">Авто-Тап +3 (1000 токенов)</div>
+    <button onclick="buyBooster(1000, 3)">Купить</button>
+  </div>
+  <button onclick="closeBoosters()">Закрыть</button>
+</div>
 
-<div class="modal" id="shopModal">
-<div class="shop-item">
-<img alt="Default Shark" src="shark.png?v=1"/>
-<button onclick="buySkin('default', 0)">Выбрать</button>
+<div class="booster-modal" id="leaderboard-modal" style="display:none;">
+  <h2>Топ игроков</h2>
+  <ul id="leaderboardList"></ul>
+  <button onclick="closeLeaderboard()">Закрыть</button>
 </div>
-<div class="shop-item">
-<img alt="Skin 2" src="shark_skin2.png?v=1"/>
-<button onclick="buySkin('skin2', 1000)">Купить</button>
-</div>
-<div class="shop-item">
-<img alt="Skin 3" src="shark_skin1.png?v=1"/>
-<button onclick="buySkin('skin3', 500)">Купить</button>
-</div>
-<button class="shop-button" onclick="closeModals()">Скрыть</button>
-</div>
-<div class="modal" id="boosterModal">
-<div class="booster-item"><div class="booster-info">Авто-Тап +1 (50 токенов)</div><button onclick="buyBooster(50, 1)">Купить</button></div>
-<div class="booster-item"><div class="booster-info">Авто-Тап +2 (100 токенов)</div><button onclick="buyBooster(100, 2)">Купить</button></div>
-<div class="booster-item"><div class="booster-info">Авто-Тап +3 (1000 токенов)</div><button onclick="buyBooster(1000, 3)">Купить</button></div>
-<button class="shop-button" onclick="closeModals()">Скрыть</button>
-</div>
-<div class="modal" id="leaderboardModal">
-<div class="shop-item">Лидеры:</div>
-<ul id="leaderboardList" style="padding:0 16px;text-align:left;"></ul>
-<button class="shop-button" onclick="closeModals()">Скрыть</button>
-</div>
+
 <script>
-let balance = 0;
-let autoTap = 0;
+const dbUrl = 'https://tralalero-fec07-default-rtdb.firebaseio.com';
 let currentSkin = 'default';
+let balance = 0;
 let ownedSkins = { default: true };
+let autoTap = 0;
 let ownedBoosters = { 1: false, 2: false, 3: false };
 let userId = null;
-let xp = 0, level = 1;
 
-const dbUrl = 'https://tralalero-fec07-default-rtdb.firebaseio.com';
-const tokenCount = document.getElementById("tokenCount");
-const tapImage = document.getElementById("tapImage");
+const tokenCount = document.getElementById('tokenCount');
+const tapImage = document.getElementById('tapImage');
+const loadingScreen = document.getElementById('loading');
+const gameContainer = document.getElementById('gameContainer');
+
+const skinPaths = {
+  default: 'shark.png?v=1',
+  skin2: 'shark_skin2.png?v=1',
+  skin3: 'shark_skin1.png?v=1'
+};
+
+function updateSkin() {
+  tapImage.src = skinPaths[currentSkin] || skinPaths.default;
+}
+
+function saveProgress() {
+  if (!userId) return;
+  const user = Telegram.WebApp.initDataUnsafe?.user || {};
+  const userData = {
+    balance, currentSkin, ownedSkins, autoTap, ownedBoosters,
+    first_name: user.first_name || "", last_name: user.last_name || "",
+    username: user.username || "", photo_url: user.photo_url || ""
+  };
+  fetch(`${dbUrl}/users/${userId}.json`, {
+    method: 'PUT',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify(userData)
+  });
+}
+
+function loadProgress() {
+  if (!userId) return;
+  fetch(`${dbUrl}/users/${userId}.json`)
+    .then(res => res.json())
+    .then(data => {
+      if (data) {
+        balance = data.balance || 0;
+        currentSkin = data.currentSkin || 'default';
+        ownedSkins = data.ownedSkins || { default: true };
+        autoTap = data.autoTap || 0;
+        ownedBoosters = data.ownedBoosters || {};
+        tokenCount.textContent = `${balance} токенов`;
+        updateSkin();
+        updateBoosterTexts();
+      }
+    });
+}
 
 function handleTap() {
   balance++;
-  tokenCount.textContent = balance;
+  if (navigator.vibrate) navigator.vibrate(30);
+  tokenCount.textContent = `${balance} токенов`;
+  showFloatingText("+1");
   tapImage.classList.add("tap-animation");
   setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
-  if (navigator.vibrate) navigator.vibrate(40);
-  showFloatingText("+1");
-  updateXP(1);
   saveProgress();
 }
 
@@ -207,107 +257,108 @@ function showFloatingText(text) {
   setTimeout(() => float.remove(), 1000);
 }
 
-function buySkin(id, price) {
-  if (ownedSkins[id]) currentSkin = id;
-  else if (balance >= price) {
+function openShop() {
+  document.getElementById('shop-modal').style.display = 'flex';
+}
+function closeShop() {
+  document.getElementById('shop-modal').style.display = 'none';
+}
+function buySkin(skinId, price) {
+  if (ownedSkins[skinId]) {
+    currentSkin = skinId;
+  } else if (balance >= price) {
     balance -= price;
-    ownedSkins[id] = true;
-    currentSkin = id;
-  } else return alert("Недостаточно токенов!");
+    ownedSkins[skinId] = true;
+    currentSkin = skinId;
+  } else {
+    alert('Недостаточно токенов!');
+    return;
+  }
   updateSkin();
-  tokenCount.textContent = balance;
+  tokenCount.textContent = `${balance} токенов`;
   saveProgress();
 }
 
-function updateSkin() {
-  const map = {
-    default: "shark.png?v=1",
-    skin2: "shark_skin2.png?v=1",
-    skin3: "shark_skin1.png?v=1"
-  };
-  tapImage.src = map[currentSkin] || map.default;
+function openBoosters() {
+  document.getElementById('booster-modal').style.display = 'flex';
+  updateBoosterTexts();
 }
-
-function buyBooster(price, power) {
-  if (ownedBoosters[power]) return alert("Уже куплен!");
-  if (balance >= price) {
+function closeBoosters() {
+  document.getElementById('booster-modal').style.display = 'none';
+}
+function updateBoosterTexts() {
+  const boosterItems = document.querySelectorAll('.booster-item');
+  boosterItems.forEach((item, index) => {
+    const increment = index + 1;
+    const infoDiv = item.querySelector('.booster-info');
+    const button = item.querySelector('button');
+    if (ownedBoosters[increment]) {
+      infoDiv.textContent = `Авто-Тап +${increment} (куплено)`;
+      button.disabled = true;
+    } else {
+      const price = increment === 3 ? 1000 : increment * 50;
+      infoDiv.textContent = `Авто-Тап +${increment} (${price} токенов)`;
+      button.disabled = false;
+    }
+  });
+}
+function buyBooster(price, increment) {
+  if (balance >= price && !ownedBoosters[increment]) {
     balance -= price;
-    autoTap += power;
-    ownedBoosters[power] = true;
-    tokenCount.textContent = balance;
+    autoTap += increment;
+    ownedBoosters[increment] = true;
+    tokenCount.textContent = `${balance} токенов`;
+    updateBoosterTexts();
     saveProgress();
-  } else alert("Недостаточно токенов!");
+  } else if (ownedBoosters[increment]) {
+    alert('Бустер уже куплен!');
+  } else {
+    alert('Недостаточно токенов!');
+  }
 }
-
 function startAutoTap() {
   setInterval(() => {
     if (autoTap > 0) {
       balance += autoTap;
-      tokenCount.textContent = balance;
+      tokenCount.textContent = `${balance} токенов`;
       saveProgress();
     }
   }, 1000);
 }
 
-function updateXP(amount) {
-  xp += amount;
-  const xpNeeded = 20 + (level - 1) * 10;
-  if (xp >= xpNeeded) {
-    xp -= xpNeeded;
-    level++;
-    alert("Новый уровень: " + level);
-  }
-}
-
 function openLeaderboard() {
-  closeModals();
-  document.getElementById("leaderboardModal").style.display = "flex";
-  fetch(`${dbUrl}/users.json`).then(r => r.json()).then(data => {
-    const list = Object.entries(data || {}).map(([id, d]) => ({
-      id, balance: d.balance || 0
-    })).sort((a,b) => b.balance - a.balance).slice(0, 10);
-    document.getElementById("leaderboardList").innerHTML =
-      list.map(u => `<li>ID ${u.id.slice(-4)}: ${u.balance}</li>`).join("");
-  });
+  document.getElementById('leaderboard-modal').style.display = 'flex';
+  loadLeaderboard();
 }
-
-function saveProgress() {
-  if (!userId) return;
-  fetch(`${dbUrl}/users/${userId}.json`, {
-    method: 'PUT',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ balance, currentSkin, ownedSkins, autoTap, ownedBoosters })
-  });
+function closeLeaderboard() {
+  document.getElementById('leaderboard-modal').style.display = 'none';
 }
-
-function loadProgress() {
-  if (!userId) return;
-  fetch(`${dbUrl}/users/${userId}.json`)
+function loadLeaderboard() {
+  fetch(`${dbUrl}/users.json`)
     .then(r => r.json())
-    .then(d => {
-      if (d) {
-        balance = d.balance || 0;
-        currentSkin = d.currentSkin || 'default';
-        ownedSkins = d.ownedSkins || { default: true };
-        autoTap = d.autoTap || 0;
-        ownedBoosters = d.ownedBoosters || {};
-        updateSkin();
-        tokenCount.textContent = balance;
-      }
+    .then(data => {
+      const list = Object.entries(data || {}).map(([id, d]) => ({
+        id,
+        balance: d.balance || 0,
+        first_name: d.first_name,
+        username: d.username,
+        photo_url: d.photo_url
+      })).sort((a,b) => b.balance - a.balance).slice(0, 10);
+      document.getElementById("leaderboardList").innerHTML =
+        list.map(u => {
+          const name = u.first_name || `ID ${u.id.slice(-4)}`;
+          const avatar = u.photo_url ? `<img src="${u.photo_url}" style="width:24px;height:24px;border-radius:50%;margin-right:6px;">` : "";
+          return `<li>${avatar}<strong>${name}</strong>: ${u.balance}</li>`;
+        }).join("");
     });
 }
 
-function closeModals() {
-  document.querySelectorAll(".modal").forEach(m => m.style.display = "none");
-}
-
-window.onload = () => {
+window.addEventListener('DOMContentLoaded', () => {
   setTimeout(() => {
-    document.getElementById("loadingScreen").style.display = "none";
-    document.querySelector(".game-container").style.display = "flex";
-  }, 800);
-
-  if (Telegram?.WebApp) {
+    loadingScreen.style.display = 'none';
+    gameContainer.style.display = 'block';
+  }, 5000);
+  if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
     Telegram.WebApp.ready();
     Telegram.WebApp.expand();
     userId = Telegram.WebApp.initDataUnsafe?.user?.id?.toString();
@@ -316,6 +367,8 @@ window.onload = () => {
       startAutoTap();
     }
   }
-};
-</script></body>
+});
+</script>
+
+</body>
 </html>
