--- a/index.html
+++ b/index.html
@@ -8,106 +8,11 @@
 <meta content="no-cache" http-equiv="Pragma"/>
 <meta content="0" http-equiv="Expires"/>
 <title>Shark Tapper</title>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&amp;display=swap" rel="stylesheet"/>
-<style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #f2f2f7;
-      color: #1c1c1e;
-      width: 100%;
-      height: 100%;
-      overflow-x: hidden;
-      touch-action: manipulation;
-    }
-    .game-container {
-      max-width: 420px;
-      margin: 0 auto;
-      padding: 100px 20px 60px;
-      background: white;
-      border-radius: 28px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-      position: relative;
-      box-sizing: border-box;
-      display: none;
-    }
-    .balance {
-      font-size: 24px;
-      font-weight: 600;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .tap-image {
-      display: block;
-      margin: 0 auto;
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      border: 6px solid white;
-      object-fit: cover;
-    }
-    .menu-buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 12px;
-      margin-top: 24px;
-    }
-    .shop-button {
-      background: white;
-      border: none;
-      padding: 12px 18px;
-      font-size: 15px;
-      font-weight: 600;
-      border-radius: 16px;
-      color: #007aff;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      cursor: pointer;
-      transition: background 0.2s ease;
-      min-width: 100px;
-    }
-    .shop-button:active {
-      background: #e5e5ea;
-    }
-    .loading-screen {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background: #fff;
-      z-index: 9999;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-    .loading-screen img {
-      position:absolute;
-      width:100%;
-      height:100%;
-      object-fit:cover;
-      z-index:-1;
-    }
-    .floating-text {
-      position: absolute;
-      font-size: 18px;
-      color: #34c759;
-      font-weight: 600;
-      animation: floatUp 1s ease-out forwards;
-      pointer-events: none;
-    }
-    @keyframes floatUp {
-      0% { opacity: 1; transform: translateY(0); }
-      100% { opacity: 0; transform: translateY(-40px); }
-    }
-    @keyframes loadProgress {
-      0% { width: 0%; }
-      100% { width: 100%; }
-    }
-  </style>
-</head>
+
+<link href="style.css" rel="stylesheet"/></head>
 <body>
 <div class="loading-screen" id="loading">
 <img alt="Loading..." src="w1.png"/>
@@ -174,212 +79,6 @@
 <ul id="leaderboardList"></ul>
 <button onclick="closeLeaderboard()">Закрыть</button>
 </div>
-<script>
-const dbUrl = 'https://tralalero-fec07-default-rtdb.firebaseio.com';
-let currentSkin = 'default';
-let balance = 0;
-let ownedSkins = { default: true };
-let autoTap = 0;
-let ownedBoosters = { 1: false, 2: false, 3: false };
-let userId = null;
 
-const tokenCount = document.getElementById('tokenCount');
-const tapImage = document.getElementById('tapImage');
-const loadingScreen = document.getElementById('loading');
-const gameContainer = document.getElementById('gameContainer');
-
-const skinPaths = {
-  default: 'shark.png?v=1',
-  skin2: 'shark_skin2.png?v=1',
-  skin3: 'shark_skin1.png?v=1'
-};
-
-function updateSkin() {
-  tapImage.src = skinPaths[currentSkin] || skinPaths.default;
-}
-
-function saveProgress() {
-  if (!userId) return;
-  const user = Telegram.WebApp.initDataUnsafe?.user || {};
-  const userData = {
-    balance, currentSkin, ownedSkins, autoTap, ownedBoosters,
-    first_name: user.first_name || "", last_name: user.last_name || "",
-    username: user.username || "", photo_url: user.photo_url || ""
-  };
-  fetch(`${dbUrl}/users/${userId}.json`, {
-    method: 'PUT',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(userData)
-  });
-}
-
-function loadProgress() {
-  if (!userId) return;
-  fetch(`${dbUrl}/users/${userId}.json`)
-    .then(res => res.json())
-    .then(data => {
-      if (data) {
-        balance = data.balance || 0;
-        currentSkin = data.currentSkin || 'default';
-        ownedSkins = data.ownedSkins || { default: true };
-        autoTap = data.autoTap || 0;
-        ownedBoosters = data.ownedBoosters || {};
-        tokenCount.textContent = `${balance} токенов`;
-        updateSkin();
-        updateBoosterTexts();
-      }
-    });
-}
-
-
-function showFloatingText(text) {
-  const float = document.createElement("div");
-  float.className = "floating-text";
-  float.textContent = text;
-  float.style.left = "50%";
-  float.style.top = "40%";
-  document.body.appendChild(float);
-  setTimeout(() => float.remove(), 1000);
-}
-
-function openShop() {
-  document.getElementById('shop-modal').style.display = 'flex';
-}
-function closeShop() {
-  document.getElementById('shop-modal').style.display = 'none';
-}
-function buySkin(skinId, price) {
-  if (ownedSkins[skinId]) {
-    currentSkin = skinId;
-  } else if (balance >= price) {
-    balance -= price;
-    ownedSkins[skinId] = true;
-    currentSkin = skinId;
-  } else {
-    alert('Недостаточно токенов!');
-    return;
-  }
-  updateSkin();
-  tokenCount.textContent = `${balance} токенов`;
-  saveProgress();
-}
-
-function openBoosters() {
-  document.getElementById('booster-modal').style.display = 'flex';
-  updateBoosterTexts();
-}
-function closeBoosters() {
-  document.getElementById('booster-modal').style.display = 'none';
-}
-function updateBoosterTexts() {
-  const boosterItems = document.querySelectorAll('.booster-item');
-  boosterItems.forEach((item, index) => {
-    const increment = index + 1;
-    const infoDiv = item.querySelector('.booster-info');
-    const button = item.querySelector('button');
-    if (ownedBoosters[increment]) {
-      infoDiv.textContent = `Авто-Тап +${increment} (куплено)`;
-      button.disabled = true;
-    } else {
-      const price = increment === 3 ? 1000 : increment * 50;
-      infoDiv.textContent = `Авто-Тап +${increment} (${price} токенов)`;
-      button.disabled = false;
-    }
-  });
-}
-function buyBooster(price, increment) {
-  if (balance >= price && !ownedBoosters[increment]) {
-    balance -= price;
-    autoTap += increment;
-    ownedBoosters[increment] = true;
-    tokenCount.textContent = `${balance} токенов`;
-    updateBoosterTexts();
-    saveProgress();
-  } else if (ownedBoosters[increment]) {
-    alert('Бустер уже куплен!');
-  } else {
-    alert('Недостаточно токенов!');
-  }
-}
-function startAutoTap() {
-  setInterval(() => {
-    if (autoTap > 0) {
-      balance += autoTap;
-      tokenCount.textContent = `${balance} токенов`;
-      saveProgress();
-    }
-  }, 1000);
-}
-
-function openLeaderboard() {
-  document.getElementById('leaderboard-modal').style.display = 'flex';
-  loadLeaderboard();
-}
-function closeLeaderboard() {
-  document.getElementById('leaderboard-modal').style.display = 'none';
-}
-function loadLeaderboard() {
-  fetch(`${dbUrl}/users.json`)
-    .then(r => r.json())
-    .then(data => {
-      const list = Object.entries(data || {}).map(([id, d]) => ({
-        id,
-        balance: d.balance || 0,
-        first_name: d.first_name,
-        username: d.username,
-        photo_url: d.photo_url
-      })).sort((a,b) => b.balance - a.balance).slice(0, 10);
-      document.getElementById("leaderboardList").innerHTML =
-        list.map(u => {
-          const name = u.first_name || `ID ${u.id.slice(-4)}`;
-          const avatar = u.photo_url ? `<img src="${u.photo_url}" style="width:24px;height:24px;border-radius:50%;margin-right:6px;">` : "";
-          return `<li>${avatar}<strong>${name}</strong>: ${u.balance}</li>`;
-        }).join("");
-    });
-}
-
-
-window.addEventListener('DOMContentLoaded', () => {
-  setTimeout(() => {
-    loadingScreen.style.display = 'none';
-    gameContainer.style.display = 'block';
-  }, 5000);
-
-  if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-
-    // GPT: Telegram Web App цветовая тема
-    if (Telegram.WebApp.colorScheme === 'dark') {
-      document.body.style.background = '#1e1e1e';
-      gameContainer.style.background = '#2c2c2e';
-      document.querySelectorAll('.balance, .shop-button').forEach(el => {
-        el.style.color = '#fff';
-      });
-    }
-
-    userId = Telegram.WebApp.initDataUnsafe?.user?.id?.toString();
-    if (userId) {
-      loadProgress();
-      startAutoTap();
-    } else {
-      alert("Не удалось получить userId из Telegram Web App.");
-    }
-  }
-});
-
-function handleTap() {
-  balance++;
-  if (navigator.vibrate) {
-    navigator.vibrate(30);
-  } else if (Telegram.WebApp.HapticFeedback) {
-    Telegram.WebApp.HapticFeedback.impactOccurred("light");
-  }
-  tokenCount.textContent = `${balance} токенов`;
-  showFloatingText("+1");
-  tapImage.classList.add("tap-animation");
-  setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
-  saveProgress();
-}</script>
-</body>
+<script src="main.js"></script><script src="telegram.js"></script></body>
 </html>
